@@ -17,6 +17,12 @@ class db_albums extends db_audio
 	{
 		return array('id', 'SongCount', 'Album', 'Filepath');
 	}
+	
+	static function handles($file)
+	{
+		// we don't want this module to handle any files, it is just a wrapper
+		return false;
+	}
 
 	static function handle($database, $file)
 	{
@@ -33,8 +39,7 @@ class db_albums extends db_audio
 			if($request['dir'][strlen($request['dir'])-1] == DIRECTORY_SEPARATOR) $request['dir'] = substr($request['dir'], 0, strlen($request['dir'])-1);
 			if($request['dir'] == '$Unknown$')
 				$request['dir'] = '';
-			$request['search'] = '^' . preg_quote($request['dir']) . '$';
-			$request['columns'] = 'Album';
+			$request['search_Album'] = '=' . $request['dir'] . '=';
 			unset($request['dir']);
 			
 			$files = parent::get($database, $request, $count, $error, 'db_audio');
