@@ -18,6 +18,12 @@ class db_artists extends db_audio
 		return array('id', 'SongCount', 'Artist', 'Filepath');
 	}
 
+	static function handles($file)
+	{
+		// we don't want this module to handle any files, it is just a wrapper
+		return false;
+	}
+
 	static function handle($database, $file)
 	{
 	}
@@ -29,13 +35,48 @@ class db_artists extends db_audio
 		{
 			if($request['dir'][0] == DIRECTORY_SEPARATOR) $request['dir'] = substr($request['dir'], 1);
 			if($request['dir'][strlen($request['dir'])-1] == DIRECTORY_SEPARATOR) $request['dir'] = substr($request['dir'], 0, strlen($request['dir'])-1);
-			if($request['dir'] == '$Unknown$')
-				$request['dir'] = '';
-			$request['search'] = '^' . preg_quote($request['dir']) . '$';
-			$request['columns'] = 'Artist';
-			unset($request['dir']);
-			
-			$files = parent::get($database, $request, $count, $error, 'db_audio');
+			if(strpos($request['dir'], DIRECTORY_SEPARATOR) !== false)
+			{
+				$dirs = split(DIRECTORY_SEPARATOR, $request['dir']);
+				if($dirs[0] == '$Unknown$')
+					$dirs[0] = '';
+				if($dirs[1] == '$Unknown$')
+					$dirs[1] = '';
+				$request['search_Artist'] = '=' . $dirs[0] . '=';
+				$request['search_Album'] = '=' . $dirs[1] . '=';
+				unset($request['dir']);
+				
+				// set to db_file which will handle the request
+				$files = parent::get($database, $request, $count, $error, 'db_audio');
+			}
+			else
+			{
+				// modify some request stuff
+				$request['order_by'] = 'Album';
+				$request['order_trimmed'] = true;
+				$request['group_by'] = 'Album';
+
+				if($request['dir'] == '$Unknown$')
+					$request['dir'] = '';
+				$request['search_Artist'] = '=' . $request['dir'] . '=';
+				unset($request['dir']);
+				
+				$files = parent::get($database, $request, $count, $error, 'db_audio');
+				
+				// make some changes
+				foreach($files as $i => $file)
+				{
+					if($files[$i]['Artist'] == '')
+						$files[$i]['Artist'] = '$Unknown$';
+					if($files[$i]['Album'] == '')
+						$files[$i]['Album'] = '$Unknown$';
+					$files[$i]['Filetype'] = 'FOLDER';
+					$files[$i]['Filesize'] = '0';
+					$files[$i]['Filepath'] = DIRECTORY_SEPARATOR . $files[$i]['Artist'] . DIRECTORY_SEPARATOR . $files[$i]['Album'] . DIRECTORY_SEPARATOR;
+					$files[$i]['Filename'] = $files[$i]['Album'];
+					$files[$i]['SongCount'] = $files[$i]['count(*)'];
+				}
+			}
 		}
 		else
 		{
